@@ -198,6 +198,7 @@ Chronological list of authors
   - Tengyu Xie
   - Raymond Zhao
   - Haleema Khan
+  - Jennifer A Clark
 
 
 External code
